--- a/templates/add_door.html
+++ b/templates/add_door.html
@@ -173,7 +173,7 @@
         }
 
         .toggle-btn {
-            background-color: #3498db;
+            background-color: #f39c12;
             color: white;
             border: none;
             border-radius: 5px;
@@ -184,7 +184,7 @@
             transition: background-color 0.2s;
         }
         .toggle-btn:hover {
-            background-color: #217dbb;
+            background-color: #e67e22;
         }
     </style>
 </head>
